Update Extracting Dominant Colors for Image Segmentation.ipynb

--- a/Extracting Dominant Colors for Image Segmentation.ipynb
+++ b/Extracting Dominant Colors for Image Segmentation.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread('./Desktop/Machine-Learning-master/27. Project - Image Segmentation Using K-Means/Pictures/elephant.jpg')"
+    "img = cv2.imread('elephant.jpg')"
    ]
   },
   {
